PProfiles beta. WIP.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .sass-cache/2c2c7f1086a6abb19f3bc61283994eb371901d7f/banner.scssc
 .sass-cache/2c2c7f1086a6abb19f3bc61283994eb371901d7f/fonts.scssc
 .sass-cache/2c2c7f1086a6abb19f3bc61283994eb371901d7f/popup.scssc
+.sass-cache/
